fix ee-dialog container z-index to be higher than the new WP ones in WP 4.0 [touch: 5808]

--- a/core/admin/assets/ee-admin-page.css
+++ b/core/admin/assets/ee-admin-page.css
@@ -130,7 +130,7 @@ table .espresso-radio-btn-options-ul .big-lbl,
 
 #espresso-admin-page-overlay-dv {
 	position   : absolute; top : 0; left : 0;
-	background : rgba(0, 0, 0, 0.6) !important; z-index : 999;
+	background : rgba(0, 0, 0, 0.6) !important; z-index : 9999990;
 }
 
 .primary-attendee-star-img {
@@ -505,7 +505,7 @@ label.error { display : block; color : #FE2A00 !important; }
  * ee-dialog helper css
  */
 .ee-admin-dialog-container {
-	position   : absolute; top : 50px; left : 25%; width : 75%; height : auto; padding : 3em 4em 2em; z-index : 9999;
+	position   : absolute; top : 50px; left : 25%; width : 75%; height : auto; padding : 3em 4em 2em; z-index : 9999991;
 	background : #FFFFFF; border : 1px solid #DDDDDD; border-radius : 5px;
 }
 
